force-app/main/default/objects/FF_Session__c/fields/AdviceChecklist__c.field-meta.xml
<CustomField>
    <fullName>AdviceChecklist__c</fullName>
    <formula>HYPERLINK(&quot;/&quot;&amp;Related_Advice__r.AdviceChecklist__r.Id, Related_Advice__r.AdviceChecklist__r.Name , &quot;_self&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Advice Checklist</label>
    <type>Text</type>
</CustomField>