force-app/main/default/objects/FF_Session__c/fields/AdviceRecommendations__c.field-meta.xml
<CustomField>
    <fullName>AdviceRecommendations__c</fullName>
    <description>Details of any advice recommendations int the fact find session.</description>
    <label>Advice recommendations</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>