force-app/main/default/objects/FF_Session__c/fields/AdviceStatus__c.field-meta.xml
<CustomField>
    <fullName>AdviceStatus__c</fullName>
    <label>Advice status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>