force-app/main/default/objects/FF_Session__c/fields/Annual_Review__c.field-meta.xml
<CustomField>
    <fullName>Annual_Review__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Annual Review</label>
    <referenceTo>OW_review__c</referenceTo>
    <relationshipLabel>Profile Snapshots</relationshipLabel>
    <relationshipName>Profile_Snapshots</relationshipName>
    <type>Lookup</type>
</CustomField>