force-app/main/default/objects/FF_Session__c/fields/ClientHasConflictOfInterest__c.field-meta.xml
<CustomField>
    <fullName>ClientHasConflictOfInterest__c</fullName>
    <description>A text field to determine if a client has a conflict of interest and potentially give some further details.</description>
    <label>Client has conflict of interest</label>
    <length>255</length>
    <type>Text</type>
</CustomField>