force-app/main/default/objects/FF_Session__c/fields/ClientHasVulnerability__c.field-meta.xml
<CustomField>
    <fullName>ClientHasVulnerability__c</fullName>
    <description>A text field to determine if a client has a vulnerability and potentially give some further details.</description>
    <label>Client has vulnerability</label>
    <length>255</length>
    <type>Text</type>
</CustomField>