force-app/main/default/objects/FF_Session__c/fields/ComplianceCheckStatus__c.field-meta.xml
<CustomField>
    <fullName>ComplianceCheckStatus__c</fullName>
    <description>Used to determine whether a snapshot should be shared with compliance consultants (CATS).
CATS can set this to &quot;Requested&quot;. Planner can then set this to &quot;Shared&quot;, which would make the snapshot available to CATS. CATS can then change the status to &quot;Reviewed&quot; once complete.</description>
    <inlineHelpText>Used to determine whether a snapshot should be shared with compliance consultants (CATS).
CATS can set this to &quot;Requested&quot;. Planner can then set this to &quot;Shared&quot;, which would make the snapshot available to CATS. CATS can then change the status to &quot;Reviewed&quot; once complete.</inlineHelpText>
    <label>Compliance check status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Requested</fullName>
            </value>
            <value>
                <fullName>Shared</fullName>
            </value>
            <value>
                <fullName>Reviewed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>