force-app/main/default/objects/FF_Session__c/fields/ComplianceDateRequested__c.field-meta.xml
<CustomField>
    <fullName>ComplianceDateRequested__c</fullName>
    <description>Date &amp; time access to the record was requested by compliance consultant.</description>
    <label>Compliance date requested</label>
    <type>DateTime</type>
</CustomField>