force-app/main/default/objects/FF_Session__c/fields/ComplianceDateReviewed__c.field-meta.xml
<CustomField>
    <fullName>ComplianceDateReviewed__c</fullName>
    <description>Date &amp; time record was marked as reviewed by compliance consultant.</description>
    <label>Compliance date reviewed</label>
    <type>DateTime</type>
</CustomField>