force-app/main/default/objects/FF_Session__c/fields/ComplianceDateShared__c.field-meta.xml
<CustomField>
    <fullName>ComplianceDateShared__c</fullName>
    <description>Date &amp; time record was shared with compliance consultant.</description>
    <label>Compliance Date Shared</label>
    <type>DateTime</type>
</CustomField>