force-app/main/default/objects/FF_Session__c/fields/DataMigrationStatus__c.field-meta.xml
<CustomField>
    <fullName>DataMigrationStatus__c</fullName>
    <description>Set to &apos;migrated&apos; if the data has been migrated, otherwise is blank.</description>
    <label>Data migration status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Migrated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>