force-app/main/default/objects/FF_Session__c/fields/EligibleForComplianceReview__c.field-meta.xml
<CustomField>
    <fullName>EligibleForComplianceReview__c</fullName>
    <description>A formula field to check if enough time has passed for this to be eligible for a compliance review.</description>
    <formula>IsPrimarySnapshot__c  &amp;&amp;
NOT(ISPICKVAL(Related_Advice__r.Advice_Status__c, &quot;Suitability declined&quot;)) &amp;&amp;
Related_Advice__r.DateAccepted__c &lt;= (DATE(YEAR(TODAY()), MONTH(TODAY()), 01) -1) &amp;&amp;
Related_Advice__r.DateAccepted__c &gt;= IF(
  MONTH(TODAY()) = 1, 
  DATE(YEAR(TODAY()) - 1, 12, 01),
  DATE(YEAR(TODAY()), MONTH(TODAY()) - 1, 01))</formula>
    <label>Eligible for compliance review</label>
    <type>Checkbox</type>
</CustomField>