force-app/main/default/objects/FF_Session__c/fields/ff_session_external_id__c.field-meta.xml
<CustomField>
    <fullName>ff_session_external_id__c</fullName>
    <description>The unique identifier functions as a secondary, external key, enabling Connect to uniquely identify records prior to their having a Salesforce ID assigned.</description>
    <externalId>true</externalId>
    <label>FF session external ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>