force-app/main/default/objects/FF_Session__c/fields/Household__c.field-meta.xml
<CustomField>
    <fullName>Household__c</fullName>
    <formula>Household_Account__r.Name</formula>
    <label>Household</label>
    <type>Text</type>
</CustomField>