force-app/main/default/objects/FF_Session__c/fields/IsPrimarySnapshot__c.field-meta.xml
<CustomField>
    <fullName>IsPrimarySnapshot__c</fullName>
    <description>Returns true if a given snapshot is related to advice and this snapshot is the primary one for that advice.</description>
    <formula>Id = Related_Advice__r.Profile_Snapshot__c</formula>
    <label>Is Primary Snapshot</label>
    <type>Checkbox</type>
</CustomField>