force-app/main/default/objects/FF_Session__c/fields/MeetingHeldDate__c.field-meta.xml
<CustomField>
    <fullName>MeetingHeldDate__c</fullName>
    <label>Meeting held date</label>
    <type>Date</type>
</CustomField>