force-app/main/default/objects/FF_Session__c/fields/OW_snapshot_version__c.field-meta.xml
<CustomField>
    <fullName>OW_snapshot_version__c</fullName>
    <description>This is the version of the snapshot.</description>
    <label>Snapshot version</label>
    <length>10</length>
    <type>Text</type>
</CustomField>