force-app/main/default/objects/FF_Session__c/fields/Planner__c.field-meta.xml
<CustomField>
    <fullName>Planner__c</fullName>
    <description>Defines who the planner is associated with this fact find session.</description>
    <formula>Related_Advice__r.Assigned_planner__r.FirstName &amp;&quot; &quot;&amp; Related_Advice__r.Assigned_planner__r.LastName</formula>
    <label>Planner</label>
    <type>Text</type>
</CustomField>