force-app/main/default/objects/FF_Session__c/fields/Related_Advice__c.field-meta.xml
<CustomField>
    <fullName>Related_Advice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Advice</label>
    <referenceTo>Advice__c</referenceTo>
    <relationshipLabel>Profile Snapshots</relationshipLabel>
    <relationshipName>FF_Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>