force-app/main/default/objects/FF_Session__c/fields/RelatedAdviceName__c.field-meta.xml
<CustomField>
    <fullName>RelatedAdviceName__c</fullName>
    <description>The name of the advice that is related to this fact find session.</description>
    <formula>Related_Advice__r.Name</formula>
    <label>Related advice name</label>
    <type>Text</type>
</CustomField>