force-app/main/default/objects/FF_Session__c/fields/SharedWithCats__c.field-meta.xml
<CustomField>
    <fullName>SharedWithCats__c</fullName>
    <description>Returns true if the household is shared with CATS.</description>
    <formula>NOT(ISBLANK(Household_Account__r.OW_share_with_cats_until__c))</formula>
    <label>Shared With CATS</label>
    <type>Checkbox</type>
</CustomField>