force-app/main/default/objects/FF_Session__c/fields/SuitabilityMeetingDateTime__c.field-meta.xml
<CustomField>
    <fullName>SuitabilityMeetingDateTime__c</fullName>
    <label>Suitability meeting date/time</label>
    <type>DateTime</type>
</CustomField>