force-app/main/default/objects/FF_Session__c/fields/SuitabilityMeetingLocation__c.field-meta.xml
<CustomField>
    <fullName>SuitabilityMeetingLocation__c</fullName>
    <description>This is the location of the suitability meeting.</description>
    <label>Suitability meeting location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>