force-app/main/default/objects/FF_Session__c/fields/Updated_by__c.field-meta.xml
<CustomField>
    <fullName>Updated_by__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>This defines who this was updated by.</description>
    <label>Updated by</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>FF Sessions (Updated by)</relationshipLabel>
    <relationshipName>FF_Sessions1</relationshipName>
    <type>Lookup</type>
</CustomField>