force-app/main/default/objects/FF_Session__c/fields/Validated__c.field-meta.xml
<CustomField>
    <fullName>Validated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this is checked, then this has been validated.</description>
    <inlineHelpText>This appears unchecked if a client has made an update to their fact find. Once the information has been checked by a planner or specialist, check this box and it will be pushed into the correct place in SF</inlineHelpText>
    <label>Validated</label>
    <type>Checkbox</type>
</CustomField>