force-app/main/default/objects/FF_Session__c/recordTypes/Internal_User_Update.recordType-meta.xml
<RecordType>
    <fullName>Internal_User_Update</fullName>
    <active>true</active>
    <label>Internal User Update</label>
</RecordType>